# CLAID

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  NOTICES  NewAndroidStarlakRules  README.md  Require.cmake  WORKSPACE.bazel  enable_android.sh  install_linux.sh  install_mac.sh  install_windows.bat  make_packages.py  package_list.txt  publish_aar.py  set_version_in_all_packages.py  sign_maven.sh  unusedWORKSPACE.bazel
claid_manager/ApplicationTypes/Cpp/: CLAIDPackageList.txt  CMakeLists.txt
claid_manager/ApplicationTypes/Java/: CMakeLists.txt
dispatch/android/: BUILD.bazel  BuildAndroid.mk  LibraryManifest.xml  Makefile  build_cmd.txt  java_capi.cpp  native-lib.cpp  nativedeps  patch_ares.sh  run_make.sh  test.java
dispatch/android/demo_app/: settings.gradle
dispatch/core/: BUILD.bazel  CLAID.cc  CLAID.hh  capi.cc  capi.h  claid_config.cc  claid_config.hh  claid_dispatcher.cc  claid_dispatcher.hh  claid_main.cc  claid_main.hh  claidcmd.cc  error.txt  gated_queue.hh  local_dispatching.cc  local_dispatching.hh  middleware.cc  middleware.hh  module_table.cc  module_table.hh  proto_util.cc  proto_util.hh  rename_files.py  shared_queue.hh  shared_queue_old.hh
dispatch/core/CLAIDConfig/: CLAIDConfig.cc  CLAIDConfig.hh
dispatch/core/Configuration/: ChannelDescription.hh  Configuration.cc  Configuration.hh  HostDescription.hh  ModuleDescription.hh  UniqueKeyMap.hh
dispatch/core/DeviceInfoGatherer/: DeviceChargingState.hh  DeviceInfoGatherer.hh  DeviceInfoGathererAndroid.hh
dispatch/core/DeviceScheduler/: GlobalDeviceScheduler.cc  GlobalDeviceScheduler.hh  GlobalDeviceSchedulerAndroid.cc  GlobalDeviceSchedulerAndroid.hh
dispatch/core/EventTracker/: EventTracker.cc  EventTracker.cpp  EventTracker.hh  EventTracker.hpp
dispatch/core/Exception/: Exception.cc  Exception.hh  ExceptionHandler.hh
dispatch/core/ExceptionHandler/: ExceptionHandler.cc  ExceptionHandler.hh
dispatch/core/Logger/: LogSinkConfiguration.cc  LogSinkConfiguration.hh  Logger.cc  Logger.hh  SeverityLevel.hh
dispatch/core/Module/: AbstractSubscriber.hh  Channel.hh  ChannelAccessRights.hh  ChannelData.hh  ChannelData.hpp  ChannelDescription.hpp  ChannelSubscriberPublisher.hh  ChannelSubscriberPublisher.hpp  ManagerModule.cc  ManagerModule.hh  Module.cc  Module.cpp  Module.hh  Module.hpp  ModuleManager.cc  ModuleManager.hh  ModuleManager.hpp  ModuleRef.cc  ModuleRef.hh  Properties.hh  PropertyHelper.hh  Publisher.hh  Publisher.hpp  Subscriber.hh  Subscriber.hpp  test.cpp
dispatch/core/RemoteDispatching/: ClientTable.cc  ClientTable.hh  HostUserTable.cc  HostUserTable.hh  RemoteClientHandler.cc  RemoteClientHandler.hh  RemoteClientKey.hh  RemoteDispatcherClient.cc  RemoteDispatcherClient.hh  RemoteDispatcherServer.cc  RemoteDispatcherServer.hh  RemoteGRPCClient.hh  RemoteService.cc  RemoteService.hh  TLSClientKeyStore.hh  TLSServerKeyStore.hh
dispatch/core/RemoteFunction/: AbstractFuture.cc  AbstractFuture.hh  AbstractMutatorHelper.hh  AbstractRemoteFunctionRunnable.hh  Future.hh  FutureHandler.hh  FutureUniqueIdentifier.cc  FutureUniqueIdentifier.hh  FuturesTable.cc  FuturesTable.hh  PayloadHelper.hh  RemoteFunction.hh  RemoteFunctionHandler.cc  RemoteFunctionHandler.hh  RemoteFunctionRunnable.hh  RemoteFunctionRunnable.java  RemoteFunctionRunnableHandler.cc  RemoteFunctionRunnableHandler.hh  RemoteFunctionRunnableHandler.java  RemoteFunctionRunnableResult.hh  TypedMutatorHelper.hh
dispatch/core/Router/: ClientRouter.cc  ClientRouter.hh  DispatcherStub.hh  HostDescription.hh  LocalRouter.cc  LocalRouter.hh  MasterRouter.cc  MasterRouter.hh  Router.cc  Router.hh  RoutingDirection.hh  RoutingNode.hh  RoutingQueueForwarder.hh  RoutingQueueMerger.hh  RoutingQueueMergerGeneric.hh  RoutingTree.hh  RoutingTreeParser.hh  ServerRouter.cc  ServerRouter.hh
dispatch/core/Traits/: is_bitset.hh  is_integer_no_bool.hh  is_integer_no_bool_no_char.hh  is_specialization_of.hh  remove_all_refs_ptrs.hh
dispatch/core/Utilities/: ArgumentParser.cc  ArgumentParser.cpp  ArgumentParser.hh  FileUtils.cc  FileUtils.cpp  FileUtils.hh  FileUtils.hpp  ITCChannel.hh  Path.hh  Path.hpp  ScheduleHelper.hh  Singleton.hh  Singleton.hpp  StringUtils.hh  StringUtils.hpp  Time.hh  Time.hpp  VariadicTemplateHelpers.hh  VariadicTemplateHelpers.hpp
dispatch/java/: BUILD.bazel  java_capi.cc
dispatch/java/test/: TestModule.java  claid_java_test.java
dispatch/proto/: BUILD.bazel  claidconfig.proto  claidservice.proto  layerdata.proto  log_message.proto  runtime.proto  sensor_data_types.proto
dispatch/python/: .gitignore  BUILD.bazel  CLAID.py  MANIFEST.in  Makefile  README.md  __init__.py  claid_cli.py  config_reload_test.py  module_injection_test.py  plot.py  py_claid.py  py_test.py  setup.py  test.py  test_config.json
dispatch/python/claid/: .gitignore  BUILD.bazel  CLAID.py  Makefile  NOTICES  __init__.py  claid_cli.py  module_injection_test.py  plot.py  setup.py  test.py  test_config.json
dispatch/python/data_collection/: load_accelerometer_data.py  load_heartrate_data.py
dispatch/tensorflow/: .gitignore  BUILD.bazel  TensorFlowAndroidJNIUtils.cc  TensorFlowAndroidJNIUtils.hh  TensorFlowLiteNNInstance.cc  TensorFlowLiteNNInstance.hh
dispatch/test/: BUILD.bazel  capi_test.cc  capi_test.json  config_reload_test.cc  config_reload_test_1.json  config_reload_test_2.json  cpp_runtime_test.cc  cpp_runtime_test.json  data_saver_json_test.cc  data_saver_json_test.json  data_sync_module_test.cc  data_sync_module_test.json  file_saver_test.cc  get_expected_properties_test.cc  local_dispatching_test.cc  module_annotator_test.cc  module_table_test.cc  module_test.cc  module_test.json  mutator_test.cc  out.txt  properties_test.cc  properties_test.json  remote_client_test.cc  remote_dispatching_test.cc  remote_dispatching_test.json  remote_function_test.cc  remote_function_test.json  remote_server_test.cc  router_test.cc  routing_tree_test.cc  run_tests.sh  shared_queue_test.cc  test_config.json  test_helpers.cc  test_helpers.hh  tls_remote_dispatching_test.cc  tls_remote_dispatching_test.json
(+970 files in other folders)
