# cc_library(
#     name = "claid_lib",
#     srcs = glob(["src/Buffer/*.cpp"]),
#     hdrs = glob(["include/Buffer/*.hpp"]) + glob(["src/**/*.hpp"]),
#     # deps = [
#     # ],
# )

# cc_library(
#     name = "claid_lib",
#     srcs = glob(["src/**/*.cpp"]),
#     hdrs = glob(["include/**/*.hpp"]) + glob(["src/**/*.hpp"]),
#     # deps = [
#     # ],
# )

# cc_library(
#     name = "claid_lib",
#     srcs = glob(["src/**/*.cpp"]),
#     hdrs = glob(["include/**/*.hpp"]) + glob(["src/**/*.hpp"]),
#     includes = ["include"],
#     # deps = [
#     # ],
# )

# cc_binary(
#     name = "claid_test",
#     srcs = [],
#     deps = [
#         "//dispatch/core:claid_dispatcher",
#         "//dispatch/core:claid_config",
#         ":claid_lib",
#         "@com_google_protobuf//:protobuf",
#     ]

# )

platform(
    name = "arm64-v8a",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:android",
    ],
)


platform(
    name = "armeabi-v7a",
    constraint_values = [
        "@platforms//cpu:armv7",
        "@platforms//os:android",
    ],
)

platform(
    name = "x86",
    constraint_values = [
        "@platforms//cpu:x86_32",
        "@platforms//os:android",
    ],
)

platform(
    name = "x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:android",
    ],
)





platform(
    name = "ios",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:ios",
    ],
)
