###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "claid-core",
    version = "1.0.0",  # Adjust version as needed
)

# Declare dependencies using `bazel_dep`
bazel_dep(name = "rules_swift", version = "2.5.0")  # Adjust to latest version if needed

# Handling gRPC and other repositories via module extensions
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "grpc", version = "1.70.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_android", version = "0.6.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_jni", version = "0.10.3")
# Registering module extensions (if required)
# This replaces loading dependencies via repository rules in WORKSPACE
# Some rules might need manual conversion to bzlmod extensions

bazel_dep(name = "rules_apple", version = "3.19.0", repo_name = "build_bazel_rules_apple")