###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "claid-core",
    version = "1.0.0",  # Adjust version as needed
)

# Declare dependencies using `bazel_dep`

# Handling gRPC and other repositories via module extensions
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "grpc", version = "1.70.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_android", version = "0.6.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_jni", version = "0.10.3")
# Registering module extensions (if required)
# This replaces loading dependencies via repository rules in WORKSPACE
# Some rules might need manual conversion to bzlmod extensions

bazel_dep(name = "rules_apple", version = "3.19.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.5.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "apple_support", version = "1.18.0", repo_name = "build_bazel_apple_support")

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")


register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_ios", version = "5.5.1", repo_name = "build_bazel_rules_ios")