workspace(name = "claid-core")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "com_github_nlohmann_json",
    strip_prefix = "json-3.11.3",
    urls = ["https://github.com/nlohmann/json/archive/v3.11.3.tar.gz"],
)
# --------------------------------------------------------------------
# gRPC C/C++ Core
# --------------------------------------------------------------------
http_archive(
    name = "com_github_grpc_grpc",
    urls = [
        "https://github.com/grpc/grpc/archive/v1.59.0.tar.gz",
    ],
    strip_prefix = "grpc-1.59.0",
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

http_archive(
    name = "build_bazel_rules_apple",
    sha256 = "f7dbce3717772fc5cb864930d18f96aa4e443b0d3dc713b13fbd45e502c55ce0",
    url = "https://github.com/bazelbuild/rules_apple/releases/download/3.17.1/rules_apple.3.17.1.tar.gz",
)

load(
    "@build_bazel_rules_apple//apple:repositories.bzl",
    "apple_rules_dependencies",
)

apple_rules_dependencies()

load(
    "@build_bazel_rules_swift//swift:repositories.bzl",
    "swift_rules_dependencies",
)

swift_rules_dependencies()

load(
    "@build_bazel_rules_swift//swift:extras.bzl",
    "swift_rules_extra_dependencies",
)

swift_rules_extra_dependencies()

load(
    "@build_bazel_apple_support//lib:repositories.bzl",
    "apple_support_dependencies",
)

apple_support_dependencies()

android_sdk_repository(
        name = "androidsdk", # Required. Name *must* be "androidsdk".
    )

android_ndk_repository(
        name = "androidndk", # Required. Name *must* be "androidndk".
    )