package(default_visibility = ["//visibility:public"])
android_library(
    name = "claid_android",
    srcs = ["test.java"],
    # resource_files = glob(["res/**/*"]),
    custom_package = "adamma.c4dhi.org",
    manifest = "LibraryManifest.xml",
    deps = ["@com_github_grpc_grpc//:grpc++",],
)


# android_binary(
#     name = "app2",
#     srcs = ["test.java"],
#     deps = [":claid_android"],
#     manifest = "AndroidManifest.xml",
# )



cc_binary(
    name = "claid_android_lib",
    srcs = ["native-lib.cpp"],
    deps = ["//dispatch/core:CLAID"],
    linkshared = True,
)

cc_library(
    name = "jni_lib",
    deps = ["@com_github_grpc_grpc//:grpc++",],
)

android_library(
    name = "lib",
    srcs = ["test.java"],
    resource_files = glob(["res/**/*"]),
    custom_package = "com.example.android.bazel",
    manifest = "LibraryManifest.xml",
    deps = [":jni_lib"],
)

android_binary(
    name = "app",
    deps = [":lib"],
    manifest = "AndroidManifest.xml",
)



