load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library", "py_grpc_library")


package(default_visibility = ["//visibility:public"])

proto_library(
    name = "claidservice_proto",
    srcs = glob(["*.proto"]),
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

cc_proto_library(
    name = "claidservice_cc_proto",
    deps = [":claidservice_proto"],
)

cc_grpc_library(
    name = "claidservice_cc_grpc",
    srcs = [":claidservice_proto"],
    grpc_only = True,
    deps = [":claidservice_cc_proto"],
)



py_proto_library(
    name = "claidservice_py_proto",
    deps = [":claidservice_proto"],
)

py_grpc_library(
    name = "claidservice_py_grpc",
    srcs = [":claidservice_proto"],
    deps = [":claidservice_py_proto"],
)

